m1 algo examen 2013-2014: ex3

--- a/M1/Algorithmique/Examen/2013-2014/examen.tex
+++ b/M1/Algorithmique/Examen/2013-2014/examen.tex
@@ -80,5 +80,13 @@ Ce programme renvoit  un coupe de valeur si il y a au moins 2 élèments dans le
 cependant il faut l'appeller avec une autre fonction pour renvoyer une erreur si il y en a 
 
 moins ou pas.
+\section{Ex2}
+\section{Exercice 3: Calcul des notes}
+On commence par trier les notes par ordre décroissant
+
+On incrémente un compte de crédit qui augment tant qu'il n'a pas atteint 30
+
+Quand il vient de dépasser 30, on retranche a la derniere matiere comptabilité, les crédits en trop.
+\section{Exercice 4}
 
 \end{document}
